Removes letter spacing in dark mode to fix multi-word link underlines

--- a/src/scss/base/typography/_mixins.scss
+++ b/src/scss/base/typography/_mixins.scss
@@ -50,7 +50,8 @@ $font--heading: 'FS Me Web', sans-serif;
 
   @include dark-mode () {
     line-height: 1.7;
-    word-spacing: .05em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
